--- a/Fly.WebAPI/appsettings.json
+++ b/Fly.WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=FlyDb;User Id=postgres; Password=Qwerty123456;"
+  }
 }
