add IOptions db string configuration

--- a/Fly.WebAPI/appsettings.json
+++ b/Fly.WebAPI/appsettings.json
@@ -6,7 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=FlyDb;User Id=postgres; Password=Qwerty123456;"
+  "PostgresConfiguration": {
+    "Server": "localhost",
+    "Port": "5432",
+    "Database": "FlyDb",
+    "User": "postgres",
+    "Password": "Qwerty123456"
   }
 }
