--- a/Fly.WebAPI/Fly.WebAPI.csproj
+++ b/Fly.WebAPI/Fly.WebAPI.csproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.2">
       <PrivateAssets>all</PrivateAssets>
@@ -26,6 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Fly.Data\Fly.Data.csproj" />
+    <ProjectReference Include="..\Fly.Services\Fly.Services.csproj" />
   </ItemGroup>
 
 </Project>
