--- a/Fly.WebUI/Fly.WebUI.csproj
+++ b/Fly.WebUI/Fly.WebUI.csproj
@@ -9,13 +9,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.2" />
+    <Compile Remove="Pagination\**" />
+    <Compile Remove="Requests\**" />
+    <Content Remove="Pagination\**" />
+    <Content Remove="Requests\**" />
+    <EmbeddedResource Remove="Pagination\**" />
+    <EmbeddedResource Remove="Requests\**" />
+    <None Remove="Pagination\**" />
+    <None Remove="Requests\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Pagination\" />
-    <Folder Include="Requests\" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.2" />
   </ItemGroup>
 
   <ItemGroup>
