--- a/Fly.Core/Fly.Core.csproj
+++ b/Fly.Core/Fly.Core.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Fly.Shared\Fly.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
