--- a/Fly.Services/Fly.Services.csproj
+++ b/Fly.Services/Fly.Services.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Fly.Core\Fly.Core.csproj" />
+    <ProjectReference Include="..\Fly.Shared\Fly.Shared.csproj" />
   </ItemGroup>
 
 </Project>
