--- a/Fly.Core/Fly.Core.csproj
+++ b/Fly.Core/Fly.Core.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Fly.Shared\Fly.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DataTransferObjects\" />
+  </ItemGroup>
+
 </Project>
