add login && code cleanup

--- a/Fly.WebAPI/appsettings.json
+++ b/Fly.WebAPI/appsettings.json
@@ -12,5 +12,10 @@
     "Database": "FlyDb",
     "User": "postgres",
     "Password": "Qwerty123456"
+  },
+  "JwtSettings": {
+    "ValidIssuer": "FlyAPI",
+    "ValidAudience": "https://localhost:5001",
+    "Expires": 5
   }
 }
