--- a/Fly.WebAPI/appsettings.json
+++ b/Fly.WebAPI/appsettings.json
@@ -13,6 +13,10 @@
     "User": "postgres",
     "Password": "Qwerty123456"
   },
+  "RedisConfiguration": {
+    "Server": "127.0.0.1",
+    "Port": "6379"
+  },
   "JwtSettings": {
     "ValidIssuer": "FlyAPI",
     "ValidAudience": "https://localhost:5001",
