--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,11 @@ services:
       POSTGRES_PASSWORD: Qwerty123456
     ports:
       - "5432:5432"
+
+  redis:
+    image: redis/redis-stack:latest
+    restart: always
+    environment:
+    - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+    - "6379:6379"
