--- a/Fly.WebUI/appsettings.json
+++ b/Fly.WebUI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiConfiguration": {
+    "Uri": "http://localhost:5001/",
+    "Part": "api/"
+  }
 }
