add aircraft request service to ui

--- a/Fly.WebAPI/appsettings.json
+++ b/Fly.WebAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "PostgresConfiguration": {
-    "Server": "postgresdb",
+    "Server": "localhost",
     "Port": "5432",
     "Database": "FlyDb",
     "User": "postgres",
