--- a/Fly.WebUI/appsettings.json
+++ b/Fly.WebUI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ApiConfiguration": {
-    "Uri": "http://localhost:5001/",
+    "Uri": "https://localhost:5000/",
     "Part": "api/"
   }
 }
