--- a/Fly.WebUI/Fly.WebUI.csproj
+++ b/Fly.WebUI/Fly.WebUI.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.3" />
+    <PackageReference Include="WebSerializer" Version="1.3.0" />
   </ItemGroup>
 
   <ItemGroup>
