--- a/Fly.WebAPI/Fly.WebAPI.csproj
+++ b/Fly.WebAPI/Fly.WebAPI.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Controllers\TicketsController.cs~RF8f3773.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Duende.IdentityServer" Version="6.2.3" />
