--- a/Fly.WebAPI/appsettings.json
+++ b/Fly.WebAPI/appsettings.json
@@ -16,5 +16,8 @@
   "RedisConfiguration": {
     "Server": "127.0.0.1",
     "Port": "6379"
+  },
+  "ClientUrl": {
+    "Url": "https://localhost:5002"
   }
 }
