--- a/Fly.Shared/Fly.Shared.csproj
+++ b/Fly.Shared/Fly.Shared.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.GuardClauses" Version="4.0.1" />
     <PackageReference Include="Redis.OM" Version="0.4.1" />
   </ItemGroup>
 
