add client config

--- a/Fly.IdentityServer/appsettings.json
+++ b/Fly.IdentityServer/appsettings.json
@@ -16,5 +16,8 @@
     "Database": "FlyDb",
     "User": "sa",
     "Password": "Qwerty123456"
+  },
+  "ClientUriConfiguration": {
+    "Uri": "https://localhost:5002"
   }
 }
