--- a/Fly.WebUI/appsettings.json
+++ b/Fly.WebUI/appsettings.json
@@ -9,5 +9,8 @@
   "ApiConfiguration": {
     "Uri": "https://localhost:5000/",
     "Part": "api/"
+  },
+  "AuthorityUri": {
+    "Uri": "https://localhost:5004/"
   }
 }
