--- a/.github/workflows/develop-webapi.yml
+++ b/.github/workflows/develop-webapi.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Restore dependencies
-      run: dotnet restore ${{ github.workspace }}/Fly.WebApi/Fly.WebApi.csproj
+      run: dotnet restore ${{ github.workspace }}/Fly.sln
     - name: Build
       run: dotnet build ${{ github.workspace }}/Fly.WebApi/Fly.WebApi.csproj --no-restore 
     - name: Test
