--- a/Fly.IdentityServer/Fly.IdentityServer.csproj
+++ b/Fly.IdentityServer/Fly.IdentityServer.csproj
@@ -14,6 +14,8 @@
 	<PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="7.0.3" />
 
 	<PackageReference Include="Microsoft.AspNetCore.Authentication.Twitter" Version="7.0.3" />
+
+	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.4" />
 	<PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
 
 	<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.3" />
