--- a/Fly.IdentityServer/Fly.IdentityServer.csproj
+++ b/Fly.IdentityServer/Fly.IdentityServer.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Communication.Email" Version="1.0.0-beta.1" />
     <PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.2.3" />
 
 	<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="7.0.3" />
