--- a/Fly.Services/Fly.Services.csproj
+++ b/Fly.Services/Fly.Services.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Communication.Email" Version="1.0.0-beta.1" />
     <PackageReference Include="GeoCoordinate.NetCore" Version="1.0.0.1" />
     <PackageReference Include="Hangfire.Core" Version="1.7.33" />
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
