--- a/Fly.WebUI/Fly.WebUI.csproj
+++ b/Fly.WebUI/Fly.WebUI.csproj
@@ -33,6 +33,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Duende.IdentityServer" Version="6.2.3" />
     <PackageReference Include="IdentityModel" Version="6.0.0" />
+    <PackageReference Include="LiqPay" Version="2022.6.1812.5401" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.3" />
